sbi-manifests/sbi-cms-platform-dev-gc-base24-classic-d2/sbi-cms/templates/route.yaml
---
# Source: sbi-cms/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sbi-cms-platform-dev-gc-base24-classic-d2
  namespace: sbi
spec:
  host: a6207894b32a949f2a124b2a9cabbfc8-cd7e170a6d02d5c5.elb.ap-south-1.amazonaws.com 
  path: "/sbi/go-connect-base24-classic-d2"
  to:
    kind: Service
    name: sbi-cms-platform-dev-gc-base24-classic-d2
  port:
    targetPort: 8290
